Implement Ant build

--- a/bin/apache2.2.22/neard.conf
+++ b/bin/apache2.2.22/neard.conf
@@ -5,4 +5,4 @@ apachePort = "80"
 apacheSslPort = "443"
 apacheOpensslExe = "bin/openssl.exe"
 
-bundleRelease = "r1"
+bundleRelease = "@RELEASE_VERSION@"
