--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,6 @@
 bundle.name = apache
 bundle.release = r2
 bundle.type = bins
-bundle.format = zip
+bundle.format = 7z
 
 #build.path = C:/neard-build
