--- a/bin/apache2.2.31/conf/httpd.conf
+++ b/bin/apache2.2.31/conf/httpd.conf
@@ -91,6 +91,7 @@ LoadModule dir_module modules/mod_dir.so
 LoadModule env_module modules/mod_env.so
 LoadModule expires_module modules/mod_expires.so
 #LoadModule ext_filter_module modules/mod_ext_filter.so
+#LoadModule fcgid_module modules/mod_fcgid.so
 #LoadModule file_cache_module modules/mod_file_cache.so
 #LoadModule filter_module modules/mod_filter.so
 LoadModule headers_module modules/mod_headers.so
@@ -126,9 +127,6 @@ LoadModule ssl_module modules/mod_ssl.so
 #LoadModule usertrack_module modules/mod_usertrack.so
 #LoadModule version_module modules/mod_version.so
 #LoadModule vhost_alias_module modules/mod_vhost_alias.so
-
-LoadModule authz_svn_module "~NEARD_LIN_PATH~/tools/svn/svn1.7.14/modules/apache22/mod_authz_svn.so"
-LoadModule dav_svn_module "~NEARD_LIN_PATH~/tools/svn/svn1.7.14/modules/apache22/mod_dav_svn.so"
 
 PHPIniDir "~NEARD_LIN_PATH~/bin/php/php5.3.13"
 LoadFile "~NEARD_LIN_PATH~/bin/php/php5.3.13/php5ts.dll"
