CGI scripts not working in cgi-bin folder

--- a/bin/apache2.2.22/conf/extra/httpd-ssl.conf
+++ b/bin/apache2.2.22/conf/extra/httpd-ssl.conf
@@ -210,11 +210,16 @@ SSLCertificateKeyFile "~NEARD_LIN_PATH~/ssl/localhost.pub"
     SSLOptions +StdEnvVars
 </FilesMatch>
 <Directory "~NEARD_LIN_PATH~/cgi-bin">
+    AddHandler cgi-script .cgi .exe .pl .py .vbs
     SSLOptions +StdEnvVars
+    Options Indexes FollowSymLinks ExecCGI
     AllowOverride None
-    Options None
-    Order allow,deny
-    Allow from all
+    
+    # START switchOnline tag - Do not replace!
+    Order Deny,Allow
+    Deny from all
+    Allow from 127.0.0.1 ::1
+    # END switchOnline tag - Do not replace!
 </Directory>
 <Directory "~NEARD_LIN_PATH~/www">
     SSLOptions +StdEnvVars
